FACT-361 - Updated locale files to contain new/fixed translations and updated templates to make use of these.

--- a/src/main/locales/cy/choose-action.json
+++ b/src/main/locales/cy/choose-action.json
@@ -9,7 +9,7 @@
     "a3": "Cysylltu â llys neu dribiwnlys i gael diweddariad ynglŷn â’ch cais",
     "a4": "Nid yw wedi ei restru yma"
   },
-  "paragraph": "neu",
+  "divider": "neu",
   "button": "Parhau",
   "error": {
     "title": "Mae yna broblem",
