--- a/src/main/locales/cy/court-details.json
+++ b/src/main/locales/cy/court-details.json
@@ -6,6 +6,7 @@
   "addressHeading": "Cyfeiriad",
   "directionsText": "Cael cyfarwyddiadau",
   "visitingExpectationText": "Beth i’w ddisgwyl wrth ddod i lys neu dribiwnlys",
+  "visitingExpectationLink": "https://www.gov.uk/guidance/what-to-expect-coming-to-a-court-or-tribunal.cy",
   "additionalInfoHeading": "Diweddariad Coronafeirws (COVID-19)",
   "openingTimesHeading": "Amseroedd agor",
   "emailHeading": "E-bost",
