--- a/src/main/locales/cy/unknownService.json
+++ b/src/main/locales/cy/unknownService.json
@@ -2,7 +2,7 @@
   "title": "Ni ellir dod o hyd i'r gwasanaeth - Dod o hyd i Lys neu Dribiwnlys - GOV.UK",
   "serviceName": "Dod o hyd i lys neu dribiwnlys",
   "h1": "Mae'n ddrwg gennym, doedden ni ddim yn gallu eich helpu chi",
-  "p_1": "Os oes gennych lythyr, e-bost neu neges destun gan Wasanaeth Llysoedd a Thribiwnlysoedd EM (GLlTEM), bydd llys neu dribiwnlys yn ei wirio am fanylion cyswllt.",
+  "p_1": "Os oes gennych lythyr, e-bost neu neges testun gan Wasanaeth Llysoedd a Thribiwnlysoedd EM (GLlTEM), edrychwch os yw'n cynnwys manylion cyswllt y llys neu dribiwnlys.",
   "h2_1": "Dewch o hyd i'r llys neu'r tribiwnlys yn ôl enw, cyfeiriad, tref neu ddinas",
   "a_1": "Chwilio am y llys yn ôl enw, cyfeiriad, tref neu ddinas",
   "h2_2": "Ffioedd llysoedd a thribiwnlysoedd",
