--- a/src/main/locales/en/court-details.json
+++ b/src/main/locales/en/court-details.json
@@ -6,6 +6,7 @@
   "addressHeading": "Address",
   "directionsText": "Get directions",
   "visitingExpectationText": "What to expect coming to a court or tribunal",
+  "visitingExpectationLink": "https://www.gov.uk/guidance/what-to-expect-coming-to-a-court-or-tribunal",
   "additionalInfoHeading": "Coronavirus (COVID-19) Update",
   "openingTimesHeading": "Opening times",
   "emailHeading": "Email",
