--- a/src/main/locales/cy/service.json
+++ b/src/main/locales/cy/service.json
@@ -7,6 +7,7 @@
     "a1": "Alla i ddim dod o hyd i'r hyn yr ydw i’n chwilio amdano"
   },
   "button": "Parhau",
+  "divider": "neu",
   "error": {
     "title": "Mae yna broblem",
     "text": "Dewiswch pa fath o help sydd ei angen arnoch mewn perthynas ag {serviceChosen}"
