--- a/src/main/locales/en/choose-service.json
+++ b/src/main/locales/en/choose-service.json
@@ -7,6 +7,7 @@
     "a1": "I can't find what I'm looking for"
   },
   "button": "Continue",
+  "divider": "or",
   "error": {
     "title": "There is a problem",
     "text": "Select what you want to know more about"
