Corrected some welsh language translations

--- a/src/main/locales/cy/court-details.json
+++ b/src/main/locales/cy/court-details.json
@@ -13,7 +13,7 @@
   "telephoneHeading": "Rhif ffôn",
   "telephoneHeadingWelsh": "Yr Iaith Gymraeg",
   "telephoneAndFaxHeading": "Rhif ffôn a ffacs",
-  "buildingFacilitiesHeading": "Cyfleusterau adeiladu",
+  "buildingFacilitiesHeading": "Cyfleusterau yn yr adeilad",
   "buildingFacilitiesP1": "Os oes gennych anabledd a’ch bod angen cymorth i ddod i wrandawiad, cysylltwch â",
   "buildingFacilitiesMultipleContacts": "neu",
   "buildingFacilitiesContactsUs": "ni.",
