--- a/src/main/locales/cy/home.json
+++ b/src/main/locales/cy/home.json
@@ -1,8 +1,8 @@
 {
   "title": "Dod o hyd i lys neu dribiwnlys - GOV.UK",
   "serviceName": "Dod o hyd i lys neu dribiwnlys",
-  "p1": "Defnyddio’r gwasanaeth hwn i ddod o hyd i lys neu dribiwnlys yng Nghymru neu Loegr",
-  "bullets": ["cyfeiriad", "manylion cyswllt", "amseroedd agor", "gwybodaeth am yr adeilad e.e. mynediad i’r anabl neu barcio", "fy helpu i gael diweddariad"],
+  "p1": "Defnyddiwch y gwasanaeth hwn i ddod o hyd i lys neu dribiwnlys yng Nghymru neu Loegr",
+  "bullets": ["cyfeiriad", "manylion cyswllt", "amseroedd agor", "gwybodaeth am yr adeilad e.e. mynediad i’r anabl neu parcio", "fy helpu i gael diweddariad"],
   "button": "Dechrau rŵan",
   "h2": "Cyn chwilio",
   "p1_text": "Mae’r gwasanaeth ar-lein ar gael hefyd yn ",
