--- a/src/main/locales/cy/search/location.json
+++ b/src/main/locales/cy/search/location.json
@@ -4,7 +4,7 @@
   "resultsTitle": "Canlyniadau chwilio - Dod o hyd i lys neu dribiwnlys - GOV.UK",
   "serviceName": "Dod o hyd i lys neu dribiwnlys",
   "question": "Beth yw enw a chyfeiriad y llys neu’r tribiwnlys?",
-  "hint": "Gellir gweld enw’r llys neu’r tribiwnlys ar lythyr, -bos neu neges destun a anfonwyd gennym.",
+  "hint": "Gellir gweld enw’r llys neu’r tribiwnlys ar lythyr, e-bost neu neges testun a anfonwyd gennym.",
   "text": "Rhowch enw llys, cyfeiriad, tref neu ddinas",
   "textExample": "Er enghraifft, Llys Teulu Blackburn. ",
   "button": "Chwilio",
