--- a/src/main/locales/cy/search/option.json
+++ b/src/main/locales/cy/search/option.json
@@ -3,7 +3,7 @@
   "title": "Beth yw enw'r llys? - Dod o hyd i Lys neu Dribiwnlys - GOV.UK",
   "serviceName": "Dod o hyd i lys neu dribiwnlys",
   "question": "A ydych chi’n gwybod enw’r llys neu’r tribiwnlys?",
-  "hint": "Gellir gweld enw’r llys neu’r tribiwnlys ar lythyr, -bos neu neges destun a anfonwyd gennym.",
+  "hint": "Gellir gweld enw’r llys neu’r tribiwnlys ar lythyr, e-bost neu neges testun a anfonwyd gennym.",
   "answers": {
     "a1": "Mae’r enw gennyf",
     "a2": "Nid yw’r enw gennyf"
