--- a/src/main/locales/cy/template.json
+++ b/src/main/locales/cy/template.json
@@ -9,9 +9,12 @@
   "accessibility": "Datganiad hygyrchedd",
   "termsAndConditions": "Telerau ac amodau",
   "usingServicesInWelsh": "Rhestr o Wasanaethau Cymraeg",
-  "cookieBannerH1": "Tell us whether you accept cookies",
-  "cookieBannerP1": "We use <a href=\"/cookies\">cookies to collect information</a> about how you use this service. ",
-  "cookieBannerP2": "We use this information to make the website work as well as possible and improve our services.",
-  "cookieBannerButton": "Accept all cookies",
+  "cookieBannerH1": "Cwcis ar Find a Court or Tribunal",
+  "cookieBannerP1": "Rydym yn defnyddio cwcis hanfodol i wneud i'r gwasanaeth hwn weithio.",
+  "cookieBannerP2": "Hoffem hefyd ddefnyddio cwcis dadansoddol fel y gallwn ddeall sut rydych yn defnyddio'r gwasanaeth a gwneud gwelliannau.",
+  "cookieBannerAcceptButton": "Derbyn cwcis dadansoddeg",
+  "cookieBannerRejectButton": "Gwrthod cwcis dadansoddeg",
+  "cookieBannerHideButton": "Cuddiwch y neges hon",
+  "cookieBannerViewCookies": "Gweld cwcis",
   "cookieBannerAnchor": "Set cookie preferences"
 }
