FACT-374 - Added in Dynatrace cookies to cookie page, with 'rum' cookies group. Added in calls to dtrum to start/stop APM

--- a/src/main/locales/en/cookies.json
+++ b/src/main/locales/en/cookies.json
@@ -6,24 +6,51 @@
   "p2": "This service uses cookies to:",
   "bullets": ["store your language selection", "store your cookie preferences", "measure how you use the service so it can be improved"],
   "h2": "How cookies are used in this service",
-  "h3": "1. To store your language selection",
   "caption": "Cookie details",
   "name": "Name",
   "purpose":"Purpose",
   "expires": "Expires",
-  "language": "Your language selection: English or Welsh",
-  "year": "1 year",
-  "h4": "2. To store your cookie preferences",
   "cookiePreferences": "Your cookie preferences",
-  "h5": "3. To measure website use",
-  "p3": "We use Google Analytics software to collect information about how you use this service. We do this to help make sure the service is meeting the needs of its users and to help us make improvements. We do not allow Google to use or share the data about how you use this site.",
   "saved": "Your cookie settings were saved",
   "additionalCookies": "Government services may set additional cookies and, if so, will have their own cookie policy and banner.",
   "homePageLink": "Go to homepage",
-  "gaDescription": "A randomly generated reference used to identify unique users and inform referring sites, visitor and session counts",
-  "gaDuration": "2 years",
-  "gidDescription": "Used to distinguish users",
-  "gidDuration": "24 hours",
-  "gatDescription": "Used to throttle request rate",
-  "gatDuration": "1 minute"
+
+  "language": {
+    "header": "1. To store your language selection",
+    "i18nDescription": "Your language selection: English or Welsh",
+    "i18nDuration": "1 year"
+  },
+  "preferences": {
+    "header": "2. To store your cookie preferences",
+    "factCookiePreferencesDescription": "Your cookie preferences",
+    "factCookiePreferencesDuration": "1 year"
+  },
+  "analytics": {
+    "header": "3. To measure website use",
+    "p1": "We use Google Analytics software to collect information about how you use this service. We do this to help make sure the service is meeting the needs of its users and to help us make improvements. We do not allow Google to use or share the data about how you use this site.",
+    "gaDescription": "A randomly generated reference used to identify unique users and inform referring sites, visitor and session counts",
+    "gaDuration": "2 years",
+    "gidDescription": "Used to distinguish users",
+    "gidDuration": "24 hours",
+    "gatDescription": "Used to throttle request rate",
+    "gatDuration": "1 minute"
+  },
+  "apm": {
+    "header": "4. To measure application performance",
+    "p1": "We use an Application Performance Monitoring Service to collect information about how you use HMCTS services. We do this to monitor HMCTS services in order to resolve issues within our services as well as collect data on how our services can be improved. HMCTS store information about: ",
+    "bullets": ["Site performance", "Website usage", "User behaviour"],
+    "p2": "Information is presented within the Application Performance Monitoring service for the purposes detailed above. We do not use or share the information or allow Service Providers to use or share the information for any other purposes.",
+    "dtCookieDescription": "Tracks a visit across multiple request",
+    "dtCookieDuration": "Session end",
+    "dtLatCDescription": "Measures server latency for performance monitoring",
+    "dtLatCDuration": "Session end",
+    "dtPCDescription": "Required to identify proper endpoints for beacon transmission; includes session ID for correlation",
+    "dtPCDuration": "Session end",
+    "dtSaDescription": "Intermediate store for page-spanning actions",
+    "dtSaDuration": "Session end",
+    "rxVisitorDescription": "Visitor ID to correlate sessions",
+    "rxVisitorDuration": "Permanent",
+    "rxvtDescription": "Session timeout",
+    "rxvtDuration": "Session end"
+  }
 }
