--- a/src/main/locales/cy/cookies.json
+++ b/src/main/locales/cy/cookies.json
@@ -6,24 +6,50 @@
   "p2": "Mae'r wefan hon yn defnyddio cwcis i:",
   "bullets":  ["storio eich dewis iaith", "storio eich dewisiadau cwcis", "mesur sut ydych chi'n defnyddio'r gwasanaeth fel y gellir ei wella"],
   "h2": "Sut mae'r gwasanaeth hwn yn defnyddio cwcis",
-  "h3": "1. Storio eich dewis iaith",
   "caption": "Manylion y cwci",
   "name": "Enw",
   "purpose":"Pwrpas",
   "expires": "Dod i ben",
-  "language": "Eich dewis iaith: Cymraeg neu Saesneg",
-  "year": "1 Eich dewis iaith: Cymraeg neu Saesneg",
-  "h4": "2. Storio eich dewisiadau cwcis",
-  "cookiePreferences": "Eich dewisiadau cwcis",
-  "h5": "3. Mesur y defnydd a wneir o'r wefan",
-  "p3": "Rydym yn defnyddio meddalwedd Google Analytics i gasglu gwybodaeth am sut rydych yn defnyddio'r gwasanaeth hwn. Rydym yn gwneud hyn i helpu i sicrhau bod y gwasanaeth yn bodloni anghenion ei ddefnyddwyr ac i'n helpu ni i wneud gwelliannau. Nid ydym yn caniatáu i Google ddefnyddio neu rannu'r data am sut rydych yn defnyddio'r wefan hon.",
   "saved": "Cafodd eich gosodiadau cwcis eu cadw",
   "additionalCookies": "Gall gwasanaethau'r llywodraeth osod cwcis ychwanegol ac, os felly, bydd ganddynt bolisi a baner cwcis eu hunain.",
   "homePageLink": "Ewch i'r hafan",
-  "gaDescription": "Cyfeirnod a gynhyrchir ar hap a ddefnyddir i adnabod defnyddwyr gwahanol a chyfarwyddo gwefannau cyfeirio a chyfrif nifer y defnyddwyr a nifer y sesiynau",
-  "gaDuration": "2 flynedd",
-  "gidDescription": "Fe'i ddefnyddir i wahaniaethu rhwng defnyddwyr",
-  "gidDuration": "24 awr",
-  "gatDescription": "Fe'i ddefnyddir i reoli cyfradd y ceisiadau a ganiateir ar y wefan",
-  "gatDuration": "1 munud"
+
+  "language": {
+    "header": "1. Storio eich dewis iaith",
+    "i18nDescription": "Eich dewis iaith: Cymraeg neu Saesneg",
+    "i18nDuration": "1 flwyddyn"
+  },
+  "preferences": {
+    "header": "2. Storio eich dewisiadau cwcis",
+    "factCookiePreferencesDescription": "Eich dewisiadau cwcis",
+    "factCookiePreferencesDuration": "1 flwyddyn"
+  },
+  "analytics": {
+    "header": "3. Mesur y defnydd a wneir o'r wefan",
+    "p1": "Rydym yn defnyddio meddalwedd Google Analytics i gasglu gwybodaeth am sut rydych yn defnyddio'r gwasanaeth hwn. Rydym yn gwneud hyn i helpu i sicrhau bod y gwasanaeth yn bodloni anghenion ei ddefnyddwyr ac i'n helpu ni i wneud gwelliannau. Nid ydym yn caniatáu i Google ddefnyddio neu rannu'r data am sut rydych yn defnyddio'r wefan hon.",
+    "gaDescription": "Cyfeirnod a gynhyrchir ar hap a ddefnyddir i adnabod defnyddwyr gwahanol a chyfarwyddo gwefannau cyfeirio a chyfrif nifer y defnyddwyr a nifer y sesiynau",
+    "gaDuration": "2 flynedd",
+    "gidDescription": "Fe'i ddefnyddir i wahaniaethu rhwng defnyddwyr",
+    "gidDuration": "24 awr",
+    "gatDescription": "Fe'i ddefnyddir i reoli cyfradd y ceisiadau a ganiateir ar y wefan",
+    "gatDuration": "1 munud"
+  },
+  "apm": {
+    "header": "4. To measure application performance",
+    "p1": "We use an Application Performance Monitoring Service to collect information about how you use HMCTS services. We do this to monitor HMCTS services in order to resolve issues within our services as well as collect data on how our services can be improved. HMCTS store information about: ",
+    "bullets": ["Site performance", "Website usage", "User behaviour"],
+    "p2": "Information is presented within the Application Performance Monitoring service for the purposes detailed above. We do not use or share the information or allow Service Providers to use or share the information for any other purposes.",
+    "dtCookieDescription": "Tracks a visit across multiple request",
+    "dtCookieDuration": "Session end",
+    "dtLatCDescription": "Measures server latency for performance monitoring",
+    "dtLatCDuration": "Session end",
+    "dtPCDescription": "Required to identify proper endpoints for beacon transmission; includes session ID for correlation",
+    "dtPCDuration": "Session end",
+    "dtSaDescription": "Intermediate store for page-spanning actions",
+    "dtSaDuration": "Session end",
+    "rxVisitorDescription": "Visitor ID to correlate sessions",
+    "rxVisitorDuration": "Permanent",
+    "rxvtDescription": "Session timeout",
+    "rxvtDuration": "Session end"
+  }
 }
