--- a/src/main/locales/cy/template.json
+++ b/src/main/locales/cy/template.json
@@ -11,9 +11,9 @@
   "usingServicesInWelsh": "Rhestr o Wasanaethau Cymraeg",
   "cookieBannerH1": "Cwcis ar Find a Court or Tribunal",
   "cookieBannerP1": "Rydym yn defnyddio cwcis hanfodol i wneud i'r gwasanaeth hwn weithio.",
-  "cookieBannerP2": "Hoffem hefyd ddefnyddio cwcis dadansoddol fel y gallwn ddeall sut rydych yn defnyddio'r gwasanaeth a gwneud gwelliannau.",
-  "cookieBannerAcceptButton": "Derbyn cwcis dadansoddeg",
-  "cookieBannerRejectButton": "Gwrthod cwcis dadansoddeg",
+  "cookieBannerP2": "We’d like to set additional cookies so we can remember your settings, understand how people use the service and make improvements.",
+  "cookieBannerAcceptButton": "Derbyn cwcis ychwanegol",
+  "cookieBannerRejectButton": "Gwrthod cwcis ychwanegol",
   "cookieBannerHideButton": "Cuddiwch y neges hon",
   "cookieBannerViewCookies": "Gweld cwcis",
   "cookieBannerAnchor": "Set cookie preferences"
