--- a/src/main/locales/en/template.json
+++ b/src/main/locales/en/template.json
@@ -11,9 +11,9 @@
   "usingServicesInWelsh": "Rhestr o Wasanaethau Cymraeg",
   "cookieBannerH1": "Cookies on Find a Court or Tribunal",
   "cookieBannerP1": "We use some essential cookies to make this service work.",
-  "cookieBannerP2": "We’d also like to use analytics cookies so we can understand how you use the service and make improvements.",
-  "cookieBannerAcceptButton": "Accept analytics cookies",
-  "cookieBannerRejectButton": "Reject analytics cookies",
+  "cookieBannerP2": "We’d like to set additional cookies so we can remember your settings, understand how people use the service and make improvements.",
+  "cookieBannerAcceptButton": "Accept additional cookies",
+  "cookieBannerRejectButton": "Reject additional cookies",
   "cookieBannerHideButton": "Hide this message",
   "cookieBannerViewCookies": "View cookies",
   "cookieBannerAnchor": "Set cookie preferences"
