--- a/src/main/locales/cy/unknownService.json
+++ b/src/main/locales/cy/unknownService.json
@@ -4,7 +4,9 @@
   "h1": "Mae'n ddrwg gennym, doedden ni ddim yn gallu eich helpu chi",
   "p_1": "Os oes gennych lythyr, e-bost neu neges testun gan Wasanaeth Llysoedd a Thribiwnlysoedd EM (GLlTEM), edrychwch os yw'n cynnwys manylion cyswllt y llys neu dribiwnlys.",
   "h2_1": "Dewch o hyd i'r llys neu'r tribiwnlys yn ôl enw, cyfeiriad, tref neu ddinas",
+  "h2_1_postcode": "Chwilio am y llys neu dribiwnlys agosaf yn ôl cod post",
   "a_1": "Chwilio am y llys yn ôl enw, cyfeiriad, tref neu ddinas",
+  "a_1_postcode": "Dod o hyd i’r llys neu dribiwnlys agosaf yn ôl cod post",
   "h2_2": "Ffioedd llysoedd a thribiwnlysoedd",
   "a_2": "Gweld faint rydych chi'n ei dalu am eich hawliad neu achos",
   "h2_3": "Dod o hyd i ffurflenni papur llys a thribiwnlys",
