--- a/src/main/locales/en/postcode-search.json
+++ b/src/main/locales/en/postcode-search.json
@@ -4,6 +4,7 @@
   "serviceName": "Find a Court or Tribunal",
   "question": "What is your postcode?",
   "hint": "We will use your postcode to show you the closest court or tribunal that handles {serviceArea} to you.",
+  "noServiceHint": "We will use your postcode to show you the closest court or tribunal to you",
   "childcareHint": "We will use the postcode of your children’s home to show you the closest court or tribunal that handles childcare arrangements to them.",
   "text": "Enter your postcode",
   "button": "Continue",
