adding a functional test for each journey, and giving default behaviour for unknown service page

--- a/src/main/locales/en/unknownService.json
+++ b/src/main/locales/en/unknownService.json
@@ -3,10 +3,8 @@
   "serviceName": "Find a Court or Tribunal",
   "h1": "Sorry, we couldn't help you",
   "p_1": "If you have a letter, email or text from HM Courts and Tribunals Service (HMCTS), a court or a tribunal check it for contact details of the court or tribunal.",
-  "h2_1": "Find the court or tribunal by name, address, town or city",
-  "h2_1_postcode": "Find the nearest court or tribunal by postcode",
-  "a_1": "Search for the court by name, address, town or city",
-  "a_1_postcode": "Search for the nearest court or tribunal by postcode",
+  "h2_1": "Find the nearest court or tribunal by postcode",
+  "a_1": "Search for the nearest court or tribunal by postcode",
   "h2_2": "Court and tribunal fees",
   "a_2": "See how much you pay for your claim or case",
   "h2_3": "Find court and tribunal paper forms",
