--- a/src/main/locales/cy/template.json
+++ b/src/main/locales/cy/template.json
@@ -11,7 +11,7 @@
   "usingServicesInWelsh": "Rhestr o Wasanaethau Cymraeg",
   "cookieBannerH1": "Cwcis ar Find a Court or Tribunal",
   "cookieBannerP1": "Rydym yn defnyddio cwcis hanfodol i wneud i'r gwasanaeth hwn weithio.",
-  "cookieBannerP2": "We’d like to set additional cookies so we can remember your settings, understand how people use the service and make improvements.",
+  "cookieBannerP2": "Hoffem osod cwcis ychwanegol fel y gallwn gofio eich gosodiadau, deall sut mae pobl yn defnyddio'r gwasanaeth a gwella gwasanaethau'r llywodraeth.",
   "cookieBannerAcceptButton": "Derbyn cwcis ychwanegol",
   "cookieBannerRejectButton": "Gwrthod cwcis ychwanegol",
   "cookieBannerHideButton": "Cuddiwch y neges hon",
