--- a/src/main/locales/en/template.json
+++ b/src/main/locales/en/template.json
@@ -11,7 +11,7 @@
   "usingServicesInWelsh": "Rhestr o Wasanaethau Cymraeg",
   "cookieBannerH1": "Cookies on Find a Court or Tribunal",
   "cookieBannerP1": "We use some essential cookies to make this service work.",
-  "cookieBannerP2": "We’d like to set additional cookies so we can remember your settings, understand how people use the service and make improvements.",
+  "cookieBannerP2": "We’d like to set additional cookies so we can remember your settings, understand how people use the service and to improve government services.",
   "cookieBannerAcceptButton": "Accept additional cookies",
   "cookieBannerRejectButton": "Reject additional cookies",
   "cookieBannerHideButton": "Hide this message",
