--- a/src/main/locales/cy/court-details.json
+++ b/src/main/locales/cy/court-details.json
@@ -46,5 +46,6 @@
   "updates": "Cael diweddariad gyda'ch cais",
   "altImageText": "Tu blaen",
   "divorceHearings": "Gwrandawiadau ysgaru",
-  "seoMetadataDescription": "{courtName} - Dod o hyd i fanylion cyswllt, oriau agor, sut i deithio yma, mathau o achosion sy'n cael eu rheoli, mynediad i'r adeilad i bobl anabl"
+  "seoMetadataDescription": "{courtName} - Dod o hyd i fanylion cyswllt, oriau agor, sut i deithio yma, mathau o achosion sy'n cael eu rheoli, mynediad i'r adeilad i bobl anabl",
+  "breathingSpace": "Gofod Anadlu"
 }
