lastest changes, for buttons, finding a-z metho

--- a/src/main/locales/cy/unknownService.json
+++ b/src/main/locales/cy/unknownService.json
@@ -13,5 +13,7 @@
   "a_3_3": ", gan gynnwys ysgariad, profiant, gweithred newid enw, hawlio arian, cymorth gyda ffioedd a ffurflenni tribiwnlys nawdd cymdeithasol.",
   "h2_4": "Holl lysoedd a thribiwnlysoedd GLlTEM",
   "a_4": "Rhestr o lysoedd a thribiwnlysoedd troseddol, sifil a theulu yng Nghymru a Lloegr",
+  "h2_5": "Find a court by prefix (a-z) welsh",
+  "a_5": "Search for a court by prefix (a-z) welsh",
   "seoMetadataDescription": "Ffyrdd eraill y gallwn eich helpu os na allwch ddod o hyd i lys neu dribiwnlys"
 }
