--- a/src/main/locales/en/search/prefix-search.json
+++ b/src/main/locales/en/search/prefix-search.json
@@ -4,10 +4,11 @@
   "serviceName": "Find a Court or Tribunal",
   "question": "Court or Tribunal",
   "resultsHint": "Courts or tribunals starting with ",
-  "noResultsHint": "Browse by name of court or tribunal",
+  "noResultsHint": "No results found, please choose another option",
+  "summary": "Browse by name of court or tribunal",
   "noResults": {
     "p1": "There are no matching results.",
-    "p2": "Improve your search results by selecting another option."
+    "p2": "Improve your search results by selecting another option"
   },
   "errorText":{
     "title": "There is a problem, please try again soon or contact us through the feedback page"
