Update casing of A-Z

--- a/src/main/locales/cy/unknownService.json
+++ b/src/main/locales/cy/unknownService.json
@@ -13,7 +13,7 @@
   "a_3_3": ", gan gynnwys ysgariad, profiant, gweithred newid enw, hawlio arian, cymorth gyda ffioedd a ffurflenni tribiwnlys nawdd cymdeithasol.",
   "h2_4": "Holl lysoedd a thribiwnlysoedd GLlTEM",
   "a_4": "Rhestr o lysoedd a thribiwnlysoedd troseddol, sifil a theulu yng Nghymru a Lloegr",
-  "h2_5": "Dewch o hyd i lys trwy ragddodiad (a-z)",
-  "a_5": "Chwilio am lys yn ôl rhagddodiad (a-z)",
+  "h2_5": "Dewch o hyd i lys trwy ragddodiad (A-Z)",
+  "a_5": "Chwilio am lys yn ôl rhagddodiad (A-Z)",
   "seoMetadataDescription": "Ffyrdd eraill y gallwn eich helpu os na allwch ddod o hyd i lys neu dribiwnlys"
 }
