--- a/src/main/locales/cy/search/prefix-search.json
+++ b/src/main/locales/cy/search/prefix-search.json
@@ -2,10 +2,11 @@
   "errorTitle": "gwall:",
   "title": "Chwilio Yn ôl Rhagddodiad - Dod o Hyd i Lys neu Dribiwnlys - GOV.UK.",
   "serviceName": "Dewch o hyd i Lys neu Dribiwnlys",
-  "heading": "Llys neu Dribiwnlys",
-  "resultsHint": "Llysoedd neu dribiwnlysoedd yn dechrau gyda ",
+  "heading": "Courts and Tribunals",
+  "resultsHeader": "Courts or tribunals starting with ",
+  "resultsHint": " results found for courts or tribunals starting with ",
   "noResultsHint": "Ni ddarganfuwyd unrhyw ganlyniadau ar gyfer llysoedd neu dribiwnlysoedd yn dechrau ",
-  "summary": "Porwch yn ôl enw'r llys neu'r tribiwnlys",
+  "summary": "Browse by name of court or tribunal. Select the first letter of the court's name.",
   "errorText":{
     "title": "Mae problem, ceisiwch eto yn fuan neu cysylltwch â ni trwy'r dudalen adborth"
   }
