FACT-673 Changed not-in-person court layout to display all email types, added new get an update on application section and updated formatting to match recent changes made to in-person court page.

--- a/src/main/locales/cy/court-details.json
+++ b/src/main/locales/cy/court-details.json
@@ -47,5 +47,6 @@
   "altImageText": "Tu blaen",
   "divorceHearings": "Gwrandawiadau ysgaru",
   "seoMetadataDescription": "{courtName} - Dod o hyd i fanylion cyswllt, oriau agor, sut i deithio yma, mathau o achosion sy'n cael eu rheoli, mynediad i'r adeilad i bobl anabl",
-  "breathingSpace": "Gofod Anadlu"
+  "breathingSpace": "Gofod Anadlu",
+  "getAnUpdateOnYourApplication": "Cael diweddariad gyda'ch cais"
 }
