--- a/src/main/locales/en/court-details.json
+++ b/src/main/locales/en/court-details.json
@@ -47,5 +47,6 @@
   "altImageText": "Front view of",
   "divorceHearings": "Divorce hearings",
   "seoMetadataDescription": "{courtName} - Find contact details, opening times, how to get to here, types of cases managed, disabled access to the building",
-  "breathingSpace": "Breathing Space"
+  "breathingSpace": "Breathing Space",
+  "getAnUpdateOnYourApplication": "Get an update on your application"
 }
