--- a/src/main/locales/cy/court-details.json
+++ b/src/main/locales/cy/court-details.json
@@ -20,7 +20,7 @@
   "translatorsOrInterpretersHeading": "Cyfieithwyr neu Ddehonglwyr",
   "translatorsOrInterpretersText": "Cael cyfieithydd mewn llys neu dribiwnlys.",
   "areasOfLawHeading": "Mae'r lleoliad hwn yn ymdrin â",
-  "areasOfLawHeadingNotInPerson": "Mwy o wybodaeth am",
+  "findOutMoreAboutHeading": "Mwy o wybodaeth am",
   "claimApplicationText": "dechrau cais i hawlio arian",
   "divorceApplicationText": "dechrau cais ysgariad",
   "civilPartnershipText": "dod â phartneriaeth sifil i ben",
