--- a/src/main/locales/en/court-details.json
+++ b/src/main/locales/en/court-details.json
@@ -20,7 +20,7 @@
   "translatorsOrInterpretersHeading": "Translators or Interpreters",
   "translatorsOrInterpretersText": "Get an interpreter at a court or tribunal.",
   "areasOfLawHeading": "This location handles",
-  "areasOfLawHeadingNotInPerson": "Find out more about",
+  "findOutMoreAboutHeading": "Find out more about",
   "claimApplicationText": "starting a money claim application",
   "divorceApplicationText": "starting a divorce application",
   "civilPartnershipText": "ending a civil partnership",
