Remove prefix from not-in-person court Financial Remedy link

--- a/src/main/locales/cy/court-details.json
+++ b/src/main/locales/cy/court-details.json
@@ -48,6 +48,5 @@
   "divorceHearings": "Gwrandawiadau ysgaru",
   "seoMetadataDescription": "{courtName} - Dod o hyd i fanylion cyswllt, oriau agor, sut i deithio yma, mathau o achosion sy'n cael eu rheoli, mynediad i'r adeilad i bobl anabl",
   "breathingSpace": "Gofod Anadlu",
-  "getAnUpdateOnYourApplication": "Cael diweddariad gyda'ch cais",
-  "financialRemedyText": "If you are making an application to settle your finances following a divorce, please refer to the guidance found here"
+  "getAnUpdateOnYourApplication": "Cael diweddariad gyda'ch cais"
 }
