--- a/src/main/locales/en/court-details.json
+++ b/src/main/locales/en/court-details.json
@@ -48,6 +48,5 @@
   "divorceHearings": "Divorce hearings",
   "seoMetadataDescription": "{courtName} - Find contact details, opening times, how to get to here, types of cases managed, disabled access to the building",
   "breathingSpace": "Breathing Space",
-  "getAnUpdateOnYourApplication": "Get an update on your application",
-  "financialRemedyText": "If you are making an application to settle your finances following a divorce, please refer to the guidance found here"
+  "getAnUpdateOnYourApplication": "Get an update on your application"
 }
