changing header names for files from covid to additional info

--- a/src/main/locales/cy/court-details.json
+++ b/src/main/locales/cy/court-details.json
@@ -7,7 +7,7 @@
   "directionsText": "Cael cyfarwyddiadau",
   "visitingExpectationText": "Beth i’w ddisgwyl wrth ddod i lys neu dribiwnlys",
   "visitingExpectationLink": "https://www.gov.uk/guidance/what-to-expect-coming-to-a-court-or-tribunal.cy",
-  "additionalInfoHeading": "Diweddariad Coronafeirws (COVID-19)",
+  "additionalInfoHeading": "Gwybodaeth Ychwanegol",
   "openingTimesHeading": "Amseroedd agor",
   "emailHeading": "E-bost",
   "telephoneHeading": "Rhif ffôn",
