--- a/src/main/locales/en/court-details.json
+++ b/src/main/locales/en/court-details.json
@@ -7,7 +7,7 @@
   "directionsText": "Get directions",
   "visitingExpectationText": "What to expect coming to a court or tribunal",
   "visitingExpectationLink": "https://www.gov.uk/guidance/what-to-expect-coming-to-a-court-or-tribunal",
-  "additionalInfoHeading": "Coronavirus (COVID-19) Update",
+  "additionalInfoHeading": "Additional information",
   "openingTimesHeading": "Opening times",
   "emailHeading": "Email",
   "telephoneHeading": "Telephone",
