--- a/src/main/locales/en/court-details.json
+++ b/src/main/locales/en/court-details.json
@@ -46,5 +46,6 @@
   "updates": "Get an update with your application",
   "altImageText": "Front view of",
   "seoMetadataDescription": "{courtName} - Find contact details, opening times, how to get to here, types of cases managed, disabled access to the building",
-  "getAnUpdateOnYourApplication": "Get an update on your application"
+  "getAnUpdateOnYourApplication": "Get an update on your application",
+  "commonPlatformHeading": "HMCTS Common Platform"
 }
