--- a/src/main/locales/en/accessibility-statement.json
+++ b/src/main/locales/en/accessibility-statement.json
@@ -7,8 +7,10 @@
   "bullets": ["change colours, contrast levels and fonts", "zoom in up to 300% without the text spilling off the screen", "navigate most of the website using just a keyboard", "navigate most of the website using speech recognition software", "listen to most of the website using a screen reader (including the most recent versions of JAWS, NVDA and VoiceOver)"],
   "p3": "We’ve also made the website text as simple as possible to understand.",
   "p4": "<a class=\"govuk-link\" href=\"https://mcmw.abilitynet.org.uk/\">AbilityNet</a> has advice on making your device easier to use if you have a disability.",
+  "h13": "How accessible this website is",
+  "p21": "The website has been tested by the Digital Accessibility Centre (DAC) and meets the required level of accessibility for compliance with the Web Content Accessibility Guidelines v 2.1.",
   "h3": "Feedback and contact information",
-  "p6": "If you need information on this website in a different format like accessible PDF, large print, easy read or braille then ",
+  "p6": "If you need information on this website in a different format like accessible PDF, large print, easy read or audio recording or braille:",
   "bullet1": "email <a class=\"govuk-link\" href=\"mailto:hmctsfinderfeedback@justice.gov.uk\">hmctsfinderfeedback@justice.gov.uk</a>",
   "p7": "We’ll consider your request and get back to you within 10 working days.",
   "h4": "Reporting accessibility problems with this website",
@@ -16,6 +18,7 @@
   "h5": "Enforcement procedure",
   "p9": "The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the ‘accessibility regulations’). If you’re not happy with how we respond to your complaint, <a class=\"govuk-link\" href=\"https://www.equalityadvisoryservice.com/\">contact the Equality Advisory and Support Service (EASS) (opens in a new window)</a>.",
   "h6": "Contacting us by phone or visiting us in person",
+  "p22" : "Contact information for all courts and tribunals can be found through the <a class=\"govuk-link\" href=\"http://www.find-court-tribunal.service.gov.uk\">Find a court or tribunal service</a>.",
   "p11": "We provide a text relay service for people who are D/deaf, hearing impaired or have a speech impediment.",
   "p12": "Our courts and tribunals have audio induction loops, or if you contact us before your visit we can arrange a British Sign Language (BSL) interpreter.",
   "h7": "Technical information about this website’s accessibility",
@@ -23,8 +26,8 @@
   "h8": "Compliance status",
   "p14": "This website is fully compliant with the Web Content Accessibility Guidelines version 2.1 AA standard.",
   "h9": "Preparation of this accessibility statement",
-  "p15": "This statement was prepared on 3 December 2020. It was last reviewed on 3 December 2020.",
-  "p16": "This website was tested at all stages of its build and subjected to <a class=\"govuk-link\" href=\"https://pa11y.org/\">Pa11y</a> testing throughout November 2020 and a full <a class=\"govuk-link\" href=\"https://digitalaccessibilitycentre.org/\">Digital Accessibility Centre(DAC)</a> assessment on 23 November 2020.",
+  "p15": "This statement was prepared on 3 December 2020. It was last reviewed on 24 June 2022.",
+  "p16": "This website was tested at all stages of its build and subjected to <a class=\"govuk-link\" href=\"https://pa11y.org/\">Pa11y</a> testing throughout May 2022 and a full <a class=\"govuk-link\" href=\"https://digitalaccessibilitycentre.org/\">Digital Accessibility Centre(DAC)</a> assessment on 14 June 2022.",
   "p17": "This is an excerpt from the DAC report explaining their methodology:",
   "h10": "Testing procedure:",
   "p18": "“The service is tested by a team of experienced auditors and analysts, many of who are disabled individuals and users of adaptive technology. The combination of subjective pan-disability user feedback and comprehensive technical auditing allows us to measure how the service performs technically and practically, thereby offering an essential added dimension to our test results that other methods of testing cannot provide.”",
