--- a/src/main/locales/en/accessibility-statement.json
+++ b/src/main/locales/en/accessibility-statement.json
@@ -14,7 +14,7 @@
   "bullet1": "email <a class=\"govuk-link\" href=\"mailto:hmctsfinderfeedback@justice.gov.uk\">hmctsfinderfeedback@justice.gov.uk</a>",
   "p7": "We’ll consider your request and get back to you within 10 working days.",
   "h4": "Reporting accessibility problems with this website",
-  "p8": "We’re always looking to improve the accessibility of this website. If you find any problems  not listed on this page or think we’re not meeting accessibility requirements, contact",
+  "p8": "We’re always looking to improve the accessibility of this website. If you find any problems  not listed on this page or think we’re not meeting accessibility requirements, contact:",
   "h5": "Enforcement procedure",
   "p9": "The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the ‘accessibility regulations’). If you’re not happy with how we respond to your complaint, <a class=\"govuk-link\" href=\"https://www.equalityadvisoryservice.com/\">contact the Equality Advisory and Support Service (EASS) (opens in a new window)</a>.",
   "h6": "Contacting us by phone or visiting us in person",
@@ -30,7 +30,7 @@
   "p16": "This website was tested at all stages of its build and subjected to <a class=\"govuk-link\" href=\"https://pa11y.org/\">Pa11y</a> testing throughout May 2022 and a full <a class=\"govuk-link\" href=\"https://digitalaccessibilitycentre.org/\">Digital Accessibility Centre(DAC)</a> assessment on 14 June 2022.",
   "p17": "This is an excerpt from the DAC report explaining their methodology:",
   "h10": "Testing procedure:",
-  "p18": "“The service is tested by a team of experienced auditors and analysts, many of who are disabled individuals and users of adaptive technology. The combination of subjective pan-disability user feedback and comprehensive technical auditing allows us to measure how the service performs technically and practically, thereby offering an essential added dimension to our test results that other methods of testing cannot provide.”",
+  "p18": "“The service is tested by a team of experienced auditors and analysts, many of whom are disabled individuals and users of adaptive technology. The combination of subjective pan-disability user feedback and comprehensive technical auditing allows us to measure how the service performs technically and practically, thereby offering an essential added dimension to our test results that other methods of testing cannot provide.”",
   "h11": "User testing:",
   "p19": "“Manual accessibility checking was conducted by a team of disabled individuals, using a range of adaptive technologies (hardware and software designed to facilitate the use of computers by people with disabilities).”",
   "h12": "Technical auditing:",
