--- a/src/main/locales/en/cookies.json
+++ b/src/main/locales/en/cookies.json
@@ -15,7 +15,7 @@
   "additionalCookies": "Government services may set additional cookies and, if so, will have their own cookie policy and banner.",
   "homePageLink": "Go to homepage",
 
-  "language": {
+  "language_": {
     "header": "1. To store your language selection",
     "i18nDescription": "Your language selection: English or Welsh",
     "i18nDuration": "1 year"
