--- a/src/main/locales/cy/cookies.json
+++ b/src/main/locales/cy/cookies.json
@@ -14,7 +14,7 @@
   "additionalCookies": "Gall gwasanaethau'r llywodraeth osod cwcis ychwanegol ac, os felly, bydd ganddynt bolisi a baner cwcis eu hunain.",
   "homePageLink": "Ewch i'r hafan",
 
-  "language": {
+  "language_": {
     "header": "1. Storio eich dewis iaith",
     "i18nDescription": "Eich dewis iaith: Cymraeg neu Saesneg",
     "i18nDuration": "1 flwyddyn"
