--- a/src/main/locales/en/home.json
+++ b/src/main/locales/en/home.json
@@ -9,11 +9,11 @@
   "p1_link": "/?lng=cy",
   "p1_link_text": "Welsh (Cymraeg)",
   "p2_text":"You cannot use this service if you live in Northern Ireland. Contact the ",
-  "p2_link_text": "Northern Ireland Courts and Tribunals",
+  "p2_link_text": "Northern Ireland Courts and Tribunals (opens in new tab)",
   "p2_text2":" for help",
   "p3_text": "This service is limited in Scotland to:",
   "bullets2": ["Immigration appeals", "Benefit appeals", "Employment claims appeals"],
   "p4_text": "Contact the ",
-  "p4_link_text": "Scottish Courts and Tribunals",
+  "p4_link_text": "Scottish Courts and Tribunals (opens in new tab)",
   "p4_text2":" for other services"
 }
