adding in fee paragraph

--- a/src/main/locales/cy/home.json
+++ b/src/main/locales/cy/home.json
@@ -5,6 +5,7 @@
   "bullets": ["cyfeiriad", "manylion cyswllt", "amseroedd agor", "gwybodaeth am yr adeilad e.e. mynediad i’r anabl neu parcio", "fy helpu i gael diweddariad"],
   "button": "Dechrau rŵan",
   "h2": "Cyn chwilio",
+  "p_fee_advice": "Ni allwch ddefnyddio’r gwasanaeth hwn i dalu ffioedd llys.",
   "p1_text": "Mae’r gwasanaeth ar-lein ar gael hefyd yn ",
   "p1_link": "/?lng=en",
   "p1_link_text": "Saesneg (English)",
